保存一次代码。